<resources>
    <string name="app_name">Pertemuan9_JMP-A</string>
    <string name="Username">Username</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="textview">TextView</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="email">Email</string>
    <string name="masukkan_alamat_email">Masukkan Alamat Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="masukkan_asal_sekolah">Masukkan Asal Sekolah</string>
    <string name="alamat_tinggal">Alamat Tinggal</string>
    <string name="masukkan_alamat_tinggal">Masukkan Alamat Tinggal</string>
    <string name="simpan">SIMPAN</string>
    <string name="todo">TODO</string>
</resources>