<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvUsernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/etUserR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/masukkan_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvPasswordR"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <EditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/masukkan_alamat_email"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/etNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/masukkan_nama_lengkap"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvAsal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/etAsal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/masukkan_asal_sekolah"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/masukkan_alamat_tinggal"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/simpan"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</ScrollView>